--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width">
       <meta name="keywords" content="mh4d, mhd, moham4d, mohamad-jamil naous, mohamad jamil naous, naous">
       <title>mh4d</title>
-      <link href="style.css" rel="stylesheet" type="text/css" />
+      <link href="/style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://cdn.rawgit.com/balzss/luxbar/ae5835e2/build/luxbar.min.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
       <link rel="icon" href="/mh4d.png">
