--- a/404.html
+++ b/404.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" type="text/css" href="404.css" />
     <link href="./assets/images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 </head>
+    <style>
+ops {
 
+  height: 50%;
+
+  width: 50%;
+
+}
+    </style>
 <body>
     <div class="container">
         <img class="ops" src="404.png" />
