--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link href="./assets/images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 </head>
     <style>
-ops {
+img.ops {
 
   height: 50%;
 
