--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Project</title>
-  <link href="prjct.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
  
 <div
 <body>
