--- a/projects.html
+++ b/projects.html
@@ -20,9 +20,10 @@
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
-			<li><a class="nav-link active" href="index.html">Home</a></li>
-			<li><a class="nav-link" href="projects.html">Projects</a></li>
-			<li><a class="nav-link" href="mailto: mohamad@rxzy.eu.org">Contact</a></li>
+			<li><a class="nav-link" href="index.html">Home</a></li>
+			 <li><a class="nav-link" href="https://blog.mh4d.eu.org">Blog</a></li>
+			<li><a class="nav-link active" href="projects.html">Projects</a></li>
+			<li><a class="nav-link" href="mailto: dev@mh4d.eu.org">Contact</a></li>
 		 </ul>
 			
 			<div class="hamburger">
