--- a/projects.html
+++ b/projects.html
@@ -42,19 +42,15 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
  
 <div
-<body>
-<button onclick="window.location.href='https://lnkstr.tk/';">Lnkstr <p>simple url shortener</p>
-</button>
-  
+<a href="https://lnkstr.tk" class="article">
 
-  <button onclick="window.location.href='https://mohamad.tk/';">my old portfolio
-  </button>
+    <h2>linkster</h2>
 
-  <button onclick="window.location.href='https://discord.com/api/oauth2/authorize?client_id=939457807156137995&permissions=8&scope=bot';">ZyplerX
-    <p>Multi-purpose Discord Bot</p>
-  </button>
-  
-</body>
+
+
+    <p>Linkster is a url shortener made by me.</p>
+
+  </a>
 </head>
         </div>
     </body>
