--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 			 
 		 </section> 
 	  </div>  
+
+				
+<p><img align="left" src="https://github-readme-stats.vercel.app/api/top-langs?username=mh4d&show_icons=true&locale=en&layout=compact" alt="mh4d" /></p>
 		
 	  <!--───────────────Projects───────────────-->
 	  
