--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
 			  <a href="https://www.youtube.com/moham4d" target="_blank"><i class="fab fa-youtube"></i></a>
         <a href="https://reddit.com/u/moham4d" target="_blank"><i class='fab fa-reddit'></i></a>
         <a href="https://www.tiktok.com/zythrical" target="_blank"><i class='fab fa-devto'></i></a>
-		<p><img align="left" src="https://github-readme-stats.vercel.app/api/top-langs?username=mh4d&show_icons=true&locale=en&layout=compact" alt="mh4d" /></p>
-		
+			
     </div>
+			 <div class="languages">
+<p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=mh4d&show_icons=true&locale=en&layout=compact" alt="mh4d" /></p>
+	
+			 </div>
 			 
 		 </section> 
 	  </div>  
