--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			
     </div>
 			 <div class="languages">
-<p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=mh4d&show_icons=true&locale=en&layout=compact" alt="mh4d" /></p>
+<p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=mh4d&show_icons=true&title_color=00a9e2&locale=en&layout=compact" alt="mh4d" /></p>
 	
 			 </div>
 			 
