--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <link rel="icon" href="/mh4d.png">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="script.js"></script>
+      <meta name="mh4d" content="Hey there, I'm Mohamad-Jamil Naous.">
+<meta name="mh4d" content="mohamad jamil naous">
+	  
   </head>
     <body>
 	  
