--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <link rel="icon" href="/mh4d.png">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="script.js"></script>
+      <meta name="description" content="mh4d">
       <meta name="mh4d" content="Hey there, I'm Mohamad-Jamil Naous.">
       <meta property="og:description" content="welcome to mh4d.eu.org, I'm mohamad known online as mh4d and I'm exploring the world of programming.">
 <meta name="mh4d" content="mohamad jamil naous">
