--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="copyrighted-site-verification" content="c3ef778f72d787a6" /><div></div>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
+      <title>mh4d</title>
       <meta name="keywords" content="mh4d, mhd, moham4d, mohamad-jamil naous, mohamad jamil naous, naous">
       <title>mh4d</title>
       <link href="/style.css" rel="stylesheet" type="text/css" />
@@ -17,6 +18,7 @@
       <meta name="mh4d" content="Hey there, I'm Mohamad-Jamil Naous.">
       <meta property="og:description" content="welcome to mh4d.eu.org, I'm mohamad known online as mh4d and I'm exploring the world of programming.">
 <meta name="mh4d" content="mohamad jamil naous">
+	  
 	  
   </head>
     <body>
