--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
-			<li><a class="nav-link active" href="index.html">Home</a></li>
+			<li><a class="nav-link active" href="index">Home</a></li>
       <li><a class="nav-link" href="https://blog.mh4d.eu.org">Blog</a></li>
-			<li><a class="nav-link" href="projects.html">Projects</a></li>
+			<li><a class="nav-link" href="projects">Projects</a></li>
 			<li><a class="nav-link" href="mailto: mohamad@naous.eu.org">Contact</a></li>
 		 </ul>
 			
@@ -61,7 +61,7 @@
 			 
 		  <div class="social-media">
 			  
-			  <a href="https://www.twitter.com/moham4d_" target="_blank"><i class='fab fa-twitter'></i></a>
+			  <a href="https://x.com/moham4d_" target="_blank"><i class='404.png'></i></a>
 			  <a href="https://github.com/mh4d" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.discordapp.com/users/1077628911267086496" target="_blank"><i class='fab fa-discord'></i></a>
 			  <a href="https://www.youtube.com/moham4d" target="_blank"><i class="fab fa-youtube"></i></a>
