--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		  <div class="social-media">
 
 			   
-			  <a href="https://x.com/moham4d_" target="_blank"><i class='fab fa-twitter'></i></a>
+			  <a href="https://x.com/moham4d_" target="_blank"><i class='𝕏'></i></a>
 			  <a href="https://github.com/mh4d" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.discordapp.com/users/1077628911267086496" target="_blank"><i class='fab fa-discord'></i></a>
 			  <a href="https://www.youtube.com/moham4d" target="_blank"><i class="fab fa-youtube"></i></a>
