--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			 
 		  <div class="social-media">
 
-		          <a href="https://x.com/moham4d_">𝕏</a>
+		          <a href="https://x.com/moham4d_" target="_blank">𝕏</a>
 			  <a href="https://x.com/moham4d_" target="_blank"><i class='𝕏'></i></a>
 			  <a href="https://github.com/mh4d" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.discordapp.com/users/1077628911267086496" target="_blank"><i class='fab fa-discord'></i></a>
