--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		 <div class="filter"></div>
 		 <section class="intro">
 		  <h3>mh4d<hr></h3>
-		  <p>Full stack developer</p>
+		  <p>Front-end Developer</p>
 		  <p></p>
           <p>just a guy interested in programming, science, math and websites</p>
 			  
@@ -61,7 +61,7 @@
 			 
 		  <div class="social-media">
 
-		          <a style="text-decoration: none; "href="https://x.com/moham4d_" target="_blank">𝕏</a>
+		          <a id="x" style="text-decoration: none; "href="https://x.com/moham4d_" target="_blank">𝕏</a>
 			  <a href="https://github.com/mh4d" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.discordapp.com/users/1077628911267086496" target="_blank"><i class='fab fa-discord'></i></a>
 			  <a href="https://www.youtube.com/moham4d" target="_blank"><i class="fab fa-youtube"></i></a>
