--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		  <!--────social media links─────-->
 			 
 		  <div class="social-media">
-
-		          <a id="x" style="text-decoration: none; "href="https://x.com/moham4d_" target="_blank">𝕏</a>
+                          
+		          <a href="https://x.com/moham4d_" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
 			  <a href="https://github.com/mh4d" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.discordapp.com/users/1077628911267086496" target="_blank"><i class='fab fa-discord'></i></a>
 			  <a href="https://www.youtube.com/moham4d" target="_blank"><i class="fab fa-youtube"></i></a>
